- Docker image ı oluşturma - cmd/Podaynci cmd klasörüne taşıma

--- a/Podsync/Dockerfile
+++ b/Podsync/Dockerfile
@@ -1,8 +1,19 @@
-FROM alpine:3.10
+FROM golang:alpine3.10
 
-WORKDIR /app/
+WORKDIR /apps
+COPY go.mod go.sum ./
+
 RUN wget -O /usr/bin/youtube-dl https://github.com/ytdl-org/youtube-dl/releases/download/2019.11.05/youtube-dl && \
     chmod +x /usr/bin/youtube-dl && \
     apk --no-cache add ca-certificates python ffmpeg
-COPY podsync /app/podsync
-CMD ["/app/podsync"]
+RUN go mod download
+
+COPY ./cmd ./
+COPY ./docs .
+COPY ./pkg .
+
+RUN go build -o main .
+
+EXPOSE 8080
+
+CMD ["./main", "--config config.toml"]
